--- a/ApiVuelo/package.json
+++ b/ApiVuelo/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "apicliente",
+  "name": "apivuelo",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,7 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
