--- a/ApiReserva/package.json
+++ b/ApiReserva/package.json
@@ -1,12 +1,27 @@
 {
   "name": "apireserva",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ksolange/ApiReserva.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ksolange/ApiReserva/issues"
+  },
+  "homepage": "https://github.com/ksolange/ApiReserva#readme",
+  "description": "",
+  "dependencies": {
+    "axios": "^1.1.3",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "path": "^0.12.7"
+  }
 }
